# artifacts/api-server/src/routes/index.ts
@@ -3,8 +3,10 @@ import healthRouter from "./health";
 import authRouter from "./auth";
 import bannersRouter from "./banners";
 import categoriesRouter from "./categories";
+import subcategoriesRouter from "./subcategories";
 import productsRouter from "./products";
 import ordersRouter from "./orders";
+import promotionsRouter from "./promotions";
 import uploadRouter from "./upload";
 
 const router: IRouter = Router();
@@ -13,8 +15,10 @@ router.use(healthRouter);
 router.use(authRouter);
 router.use(bannersRouter);
 router.use(categoriesRouter);
+router.use(subcategoriesRouter);
 router.use(productsRouter);
 router.use(ordersRouter);
+router.use(promotionsRouter);
 router.use(uploadRouter);
 
 export default router;
